--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     <!-- Seção Hero -->
     <section class="container mx-auto px-4 py-20 text-center" data-aos="fade-up">
-        <h1 class="text-4xl md:text-6xl font-bold mb-6 typewriter">Webibox, muito mais do um site</h1>
+        <h1 class="text-4xl md:text-6xl font-bold mb-6 typewriter">Webibox</h1>
         <p class="text-xl md:text-2xl text-blue-100 max-w-3xl mx-auto">
             Criamos sites profissionais, personalizados e focados na experiência do usuário. A Webibox é uma solução ideal para empreendedores que buscam um site que não apenas impressiona, mas converte e gera resultados reais.
         </p>
