--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     <!-- Seção de Benefícios -->
     <section id="benefits" class="container mx-auto px-4 py-20">
-        <h2 class="text-3xl md:text-4xl font-bold text-center mb-12" data-aos="fade-up">Oque te entegramos</h2>
+        <h2 class="text-3xl md:text-4xl font-bold text-center mb-12" data-aos="fade-up">Oque te entregamos</h2>
         <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
             <div class="benefit-card bg-blue-800 p-8 rounded-lg hover:bg-blue-700 transition-colors" data-aos="fade-up" data-aos-delay="100">
                 <div class="mb-6"><i data-lucide="layout" class="w-12 h-12"></i></div>
